- Allowed disabling in content editable elements. - Fixed bug where auto copy would execute on text deselection - Fixed issue with triple clicking to select causing multiple fires of auto copy - Allowed for selecting whether ctrl/shift enables or disables auto copy - Changed font size on options page - Reworked handling of options - Added <all_urls> to manifest to try and get it working for file:///
git-svn-id: http://svn.stratusnine.com/chrome-extensions/Auto-Copy/trunk@50 896c57a5-8753-4841-adff-eca2467e9916

--- a/css/options.css
+++ b/css/options.css
@@ -1,5 +1,11 @@
 body {
   margin: 40px;
+  font-size: 16px;
+}
+
+input[type=checkbox], input[type=radio] {
+  width: 16px;
+  height: 16px;
 }
 
 div#diviurlap {
